--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta name="google-site-verification" content="kQK1yzWCcyKj2BmK1rLs4vUdvRKXb9yZM8DaW9l9RrE" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Explore anime reviews, recommendation, character, & many more. Stay connected with the latest in the anime world">
+  <meta name="keywords" content="Anime, Manga, Anime Character, Anime review, Anime Recommendation, Anime Information">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
